// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Square changes green when clicked 1`] = `
<div
  className="golsquare column1"
  onClick={[Function]}
/>
`;

exports[`Square changes green when clicked 2`] = `
<div
  className="golsquare column1 alive"
  onClick={[Function]}
/>
`;

exports[`Square changes green when clicked 3`] = `
<div
  className="golsquare column1"
  onClick={[Function]}
/>
`;
